...
            android:text="@string/amessage"
            android:textColor="#FFFFFF"
            android:textSize="16dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/appointment_name"

            android:hint="@string/aname"
            android:inputType="textCapWords"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:paddingLeft="8dp"
            android:scrollbars="horizontal" />

        <EditText
            android:id="@+id/appointment_location"

            android:hint="@string/alocation"
            android:inputType="textCapWords"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:paddingLeft="8dp"
            android:scrollbars="horizontal"
            android:nextFocusDown="@id/appointment_DD"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/appointment_DD"
...
            android:hint="@string/DD"
            android:inputType="number"
            android:layout_height="match_parent"
            android:layout_width="45dp"
            android:paddingLeft="8dp"
            android:maxLength="2"
            android:nextFocusDown="@id/appointment_MM"/>

        <EditText
            android:id="@+id/appointment_MM"

            android:hint="@string/MM"
            android:inputType="number"
            android:layout_height="match_parent"
            android:layout_width="49dp"
            android:paddingLeft="8dp"
            android:maxLength="2"
            android:nextFocusDown="@id/appointment_YYYY"/>

        <EditText
            android:id="@+id/appointment_YYYY"

            android:hint="@string/YYYY"
            android:inputType="number"
            android:layout_height="match_parent"
            android:layout_width="65dp"
            android:paddingLeft="8dp"
            android:maxLength="4"
            android:nextFocusDown="@id/appointment_hour"/>

        <!-- used for format error reporting across date fields -->
        <EditText
            android:id="@+id/date_error"
            android:layout_width="30dp"
            android:layout_height="wrap_content"/>
...
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:hint="@string/ahour"
            android:inputType="number"
            android:paddingLeft="8dp"
            android:nextFocusDown="@id/appointment_min"/>

        <EditText
            android:id="@+id/appointment_min"

            android:hint="@string/amin"
            android:inputType="number"
            android:layout_width="49dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:paddingLeft="8dp"
            android:nextFocusDown="@id/appointment_notes"/>

        <!-- used for format error reporting across time fields -->
        <EditText
            android:id="@+id/time_error"
            android:layout_width="30dp"
            android:layout_height="wrap_content" />
...
