...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.csbgroup.myphr.Appointments.AppointmentsDetails">

        <!-- Appointment Title -->
        <EditText
            android:id="@+id/appointments_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="16dp"
            android:layout_toEndOf="@+id/notes_title"
            android:hint="@string/title"
...
            android:layout_marginTop="20dp"
            android:text="@string/alocation"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/app_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/location_title"
            android:layout_marginStart="5dp"
            android:hint="@string/location"
            android:inputType="textMultiLine"
...
            android:layout_marginTop="20dp"
            android:text="@string/adate"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/app_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/date_title"
            android:layout_marginStart="5dp"
            android:hint="@string/ddmmyyyy"
            android:inputType="text"
...
            android:layout_toEndOf="@+id/reminders"
            android:text="@string/apptime"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/app_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/time_title"
            android:layout_below="@+id/time_title"
            android:hint="@string/hhmm"
            android:inputType="text"
...
                android:visibility="gone"/>

        </RadioGroup>


        <Switch
            android:id="@+id/reminder_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/reminders"
            android:layout_alignBottom="@+id/reminders"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp" />

        <!-- Notes -->
        <TextView
            android:id="@+id/notes_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/checkBox3"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/notes"
            android:textSize="18sp"
            android:textStyle="bold" />

...
            android:layout_alignTop="@+id/appointments_title"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/ic_appointment"
            android:contentDescription="@string/appointment_logo" />

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/radios"
            android:layout_below="@+id/radios"
            android:text="@string/week"
            android:textColor="#777777"
            android:textSize="17dp"
            android:visibility="gone"/>
        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/radios"
            android:layout_below="@+id/checkBox1"
            android:text="@string/day"
            android:textColor="#777777"
...
