...

    // Basic strings
    <string name="app_name">MyPHR</string>
    <string name="contacts">Contacts</string>
    <string name="medication">Medication</string>
    <string name="calendar">Calendar</string>
    <string name="appointments">Appointments</string>
    <string name="measurements">Measurements</string>

    // Settings and Details strings
    <string name="edit_icon">Edit Icon</string>
    <string name="reminders">Reminders</string>
    <string name="notes">Notes</string>

    // Calendar strings
    <string name="last_date_arrow">Last Date Arrow</string>
    <string name="next_date_arrow">Next Date Arrow</string>
...
    <string name="title">Title</string>
    <string name="location">Location</string>
    <string name="ddmmyyyy">DD/MM/YYYY</string>
    <string name="hhmm">HH:MM</string>
    <string name="general">General</string>
    <string name="descriptive">Descriptive</string>
    <string name="week">One week prior</string>
    <string name="day">One day prior</string>
    <string name="morning">The morning of</string>

    // Measurement strings
    <string name="centile">Centile</string>
    <string name="measmessage">Enter the details for your new measurement:</string>
    <string name="systolic">Systolic</string>
    <string name="diastolic">Diastolic</string>
...
    <string name="MM">MM</string>
    <string name="YYYY">YYYY</string>
    <string name="invnotes">Notes</string>

    // Login strings
    <string name="change_pin">Please set new PIN</string>
    <string name="save">Save</string>
    <string name="icon_desc">App Icon</string>
    <string name="finger_desc">Fingerprint Icon</string>
    <string name="welcome">Welcome\nPlease set a PIN"</string>
    <string name="finger_unsupported">Your device does not support fingerprint authentication</string>
    <string name="finger_perm">Please enable the fingerprint permission</string>
    <string name="finger_deconfigured">No fingerprint configured. Please register at least one fingerprint in your device\'s Settings</string>
...
